2014-02-10 John Wu <John dot Wu at ACM dot org>
	* src/selectClause.cpp:397 change <= to <, the equal sign allows
	a selection expression without an aggregator to be declared as
	being separable, which violates the intention of the function
	(this addresses the problem reported by Sean McNamara on 2/7/2014)

2014-02-06 John Wu <John dot Wu at ACM dot org>
	* src/column.h, src/column.cpp: add function fullname to deal with
	the printing of column names
	* src/irelic.cpp, src/ibin.cpp: allow the read function and some
	constructors to proceed with null col value
	* src/column.h: change column::mutexLock to allow the first
	argument of the constructor to be nil
	* src/index.cpp: change versions of function activate to allow the
	member variable col to be nil

2014-02-05 John Wu <John dot Wu at ACM dot org>
	* src/dictionary.cpp: clean up the function mergeBuffers

2014-02-04 John Wu <John dot Wu at ACM dot org>
	* configure.ac: change uint32_t to unsigned in the sample test for
	c++11 flag
	* src/dictionary.h, src/dictionary.cpp: add function mergeBuffers
	and make use of mergeBuffers in function write to reduce I/O time

2014-02-03 John Wu <John dot Wu at ACM dot org>
	* src/dictionary.h: add function dictionary::print
	* src/dictionary.cpp: function readKeys0 has an off-by-1 problem
	that causes it to read the previous version of dictionary
	incorrectly (with integer 1 left undefined, found in debugging a
	test case reported by Alex Romosan)

2014-02-02 John Wu <John dot Wu at ACM dot org>
	* configure.ac: modify the block that try to compile src/util.cpp
	to use a single statement on std::unordered_map (to minimize
	dependencies in util.h, a problem reported by Alex Romosan)

2014-01-27 John Wu <John dot Wu at ACM dot org>
	* tests/scripts/fastbit-config.in: add option --cxxextra to
	display the extra option required to compile C++ code

2014-01-24 John Wu <John dot Wu at ACM dot org>
	* configure.ac: add statements to check if --std=c++11 is needed