@@ -128,7 +128,7 @@ ibis::direkte::direkte(const ibis::column* c, uint32_t popu, uint32_t ntpl)
 /// range are ignored.
 ibis::direkte::direkte(const ibis::column* c, uint32_t card,
 		       array_t<uint32_t>& ind) : ibis::index(c) {
-    if (c == 0 || card == 0) return;
+    if (card == 0) return;
     if (ind.empty()) return;
 
     try {
@@ -678,16 +678,18 @@ int ibis::direkte::write(const char* dt) const {
     ierr = UnixWrite(fdes, header, 8);
     if (ierr < 8) {
 	LOGGER(ibis::gVerbose > 0)
-	    << "Warning -- direkte[" << col->fullname() << "]::write(" << fnm
-	    << ") failed to write the 8-byte header, ierr = " << ierr;
+	    << "Warning -- direkte[" << (col ? col->fullname() : "?.?")
+	    << "]::write(" << fnm << ") failed to write the 8-byte header, "
+            "ierr = " << ierr;
 	return -3;
     }
     ierr  = UnixWrite(fdes, &nrows, sizeof(uint32_t));
     ierr += UnixWrite(fdes, &nobs,  sizeof(uint32_t));
     if (ierr < 8) {
 	LOGGER(ibis::gVerbose > 0)
-	    << "Warning -- direkte[" << col->fullname() << "]::write(" << fnm
-	    << ") failed to write nrows and nobs, ierr = " << ierr;
+	    << "Warning -- direkte[" << (col ? col->fullname() : "?.?")
+	    << "]::write(" << fnm << ") failed to write nrows and nobs, "
+            "ierr = " << ierr;
 	return -4;
     }
     offset64.resize(nobs+1);
@@ -695,8 +697,9 @@ int ibis::direkte::write(const char* dt) const {
     ierr = UnixSeek(fdes, header[6]*(nobs+1), SEEK_CUR);
     if (ierr != offset64[0]) {
 	LOGGER(ibis::gVerbose > 0)
-	    << "Warning -- direkte[" << col->fullname() << "]::write(" << fnm
-	    << ") failed to seek to " << offset64[0] << ", ierr = " << ierr;
+	    << "Warning -- direkte[" << (col ? col->fullname() : "?.?")
+	    << "]::write(" << fnm << ") failed to seek to " << offset64[0]
+            << ", ierr = " << ierr;
 	return -5;
     }
     for (uint32_t i = 0; i < nobs; ++ i) {
@@ -709,8 +712,9 @@ int ibis::direkte::write(const char* dt) const {
     ierr = UnixSeek(fdes, 16, SEEK_SET);
     if (ierr != 16) {
 	LOGGER(ibis::gVerbose > 0)
-	    << "Warning -- direkte[" << col->fullname() << "]::write(" << fnm
-	    << ") failed to seek to offset 16, ierr = " << ierr;
+	    << "Warning -- direkte[" << (col ? col->fullname() : "?.?")
+            << "]::write(" << fnm << ") failed to seek to offset 16, ierr = "
+            << ierr;
 	return -6;
     }
     if (useoffset64) {
@@ -726,8 +730,9 @@ int ibis::direkte::write(const char* dt) const {
     }
     if (ierr < (off_t)(header[6]*(nobs+1))) {
 	LOGGER(ibis::gVerbose > 0)
-	    << "Warning -- direkte[" << col->fullname() << "]::write(" << fnm
-	    << ") failed to write bitmap offsets, ierr = " << ierr;
+	    << "Warning -- direkte[" << (col ? col->fullname() : "?.?")
+	    << "]::write(" << fnm << ") failed to write bitmap offsets, "
+            "ierr = " << ierr;
 	return -7;
     }
 #if defined(FASTBIT_SYNC_WRITE)
@@ -739,7 +744,8 @@ int ibis::direkte::write(const char* dt) const {
 #endif
 
     LOGGER(ibis::gVerbose > 5)
-	<< "direkte[" << col->fullname() << "]::write -- wrote " << nobs
+	<< "direkte[" << (col ? col->fullname() : "?.?")
+        << "]::write -- wrote " << nobs
         << " bitmap" << (nobs>1?"s":"") << " to " << fnm;
     return 0;
 } // ibis::direkte::write
@@ -794,7 +800,7 @@ int ibis::direkte::read(const char* f) {
 		  header[7] == static_cast<char>(0))) {
 	if (ibis::gVerbose > 0) {
 	    ibis::util::logger lg;
-	    lg() << "Warning -- direkte[" << col->fullname()
+	    lg() << "Warning -- direkte[" << (col ? col->fullname() : "?.?")
                  << "]::read the header from " << fnm << " (";
 	    printHeader(lg(), header);
 	    lg() << ") does not contain the expected values";
@@ -825,9 +831,9 @@ int ibis::direkte::read(const char* f) {
 	if (nprt > dim[1])
 	    nprt = dim[1];
 	ibis::util::logger lg;
-	lg() << "DEBUG -- direkte[" << col->fullname() << "]::read(" << fnm
-		    << ") got nobs = " << dim[1]
-		    << ", the offsets of the bit vectors are\n";
+	lg() << "DEBUG -- direkte[" << (col ? col->fullname() : "?.?")
+             << "]::read(" << fnm << ") got nobs = " << dim[1]
+             << ", the offsets of the bit vectors are\n";
 	if (header[6] == 8) {
 	    for (unsigned i = 0; i < nprt; ++ i)
 		lg() << offset64[i] << " ";
@@ -848,9 +854,9 @@ int ibis::direkte::read(const char* f) {
     initBitmaps(fdes);
     str = 0;
     LOGGER(ibis::gVerbose > 3)
-	<< "direkte[" << col->name() << "]::read(" << fnm << ") finished "
-	"reading index header with nrows=" << nrows << " and bits.size()="
-	<< bits.size();
+	<< "direkte[" << (col ? col->name() : "?.?") << "]::read(" << fnm
+        << ") finished reading index header with nrows=" << nrows
+        << " and bits.size()=" << bits.size();
     return 0;
 } // ibis::direkte::read
 
@@ -882,9 +888,9 @@ int ibis::direkte::read(ibis::fileManager::storage* st) {
 
     initBitmaps(st);
     LOGGER(ibis::gVerbose > 3)
-	<< "direkte[" << col->name() << "]::read(" << st << ") finished "
-	"reading index header with nrows=" << nrows << " and bits.size()="
-	<< bits.size();
+	<< "direkte[" << (col ? col->name() : "?.?") << "]::read(" << st
+        << ") finished reading index header with nrows=" << nrows
+        << " and bits.size()=" << bits.size();
     return 0;
 } // ibis::direkte::read
 
@@ -1027,21 +1033,21 @@ ibis::direkte::keys(const ibis::bitvector& mask) const {
 	    }
 	    else {
 		LOGGER(ibis::gVerbose > 2)
-		    << "Warning -- direkte[" << col->fullname()
+		    << "Warning -- direkte[" << (col ? col->fullname() : "?.?")
                     << "]::keys bits[" << i << "]->size() = "
 		    << bits[i]->size() << ", but mask.size() = " << mask.size();
 	    }
 	}
 	else {
 	    LOGGER(ibis::gVerbose > 4)
-		<< "Warning -- direkte[" << col->fullname() << "]::keys bits["
-                << i << "] is nil";
+		<< "Warning -- direkte[" << (col ? col->fullname() : "?.?")
+                << "]::keys bits[" << i << "] is nil";
 	}
     }
 
     ibis::util::sortKeys(ires, *res);
     LOGGER(res->empty() && ibis::gVerbose > 1)
-	<< "Warning -- direkte[" << col->fullname()
+	<< "Warning -- direkte[" << (col ? col->fullname() : "?.?")
         << "]::keys failed to compute the keys most likely "
 	"because the index does not have the same number of rows as data";
     return res.release();
@@ -1283,9 +1289,9 @@ void ibis::direkte::locate(const ibis::qContinuousRange& expr,
 	    break;}
 	default: {
 	    // nothing specified, match all
-	    if (ibis::gVerbose > -1)
-		col->logWarning("direkte::locate", "no operator specified "
-				"in a qContinuousQuery object");
+	    LOGGER(ibis::gVerbose > -1)
+		<< "Warning -- direkte::locate encounters a unknown operator "
+                "in a qContinuousQuery object";
 	    ib = 0;
 	    ie = bits.size();
 	    break;}
@@ -1410,11 +1416,11 @@ double ibis::direkte::estimateCost(const ibis::qContinuousRange& expr) const {
 	    }
 	}
 	else {
-	    const unsigned elm = col->elementSize();
+	    const unsigned elm = (col ? col->elementSize() : 4U);
 	    if (elm > 0)
-		cost = (double)elm * col->partition()->nRows();
+		cost = (double)elm * nrows;
 	    else
-		cost = 4.0 * col->partition()->nRows();
+		cost = 4.0 * nrows;
 	}
     }
     return cost;
@@ -1437,7 +1443,8 @@ double ibis::direkte::estimateCost(const ibis::qDiscreteRange& expr) const {
 /// then it will be used, otherwise it simply creates a new index using the
 /// data in dt.
 long ibis::direkte::append(const char* dt, const char* df, uint32_t nnew) {
-    if (dt == 0 || *dt == 0 || df == 0 || *df == 0 || nnew == 0) return -1L;    
+    if (col == 0 || dt == 0 || *dt == 0 || df == 0 || *df == 0 || nnew == 0)
+        return -1L;    
 
     const uint32_t nold =
         (std::strcmp(dt, col->partition()->currentDataDir()) == 0 ?
@@ -1653,7 +1660,7 @@ long ibis::direkte::append(const ibis::direkte& tail) {
 
     nrows += tail.nrows;
     LOGGER(nrows != ntot && ibis::gVerbose >= 0) 
-	<< "Warning -- direkte[" << col->fullname()
+	<< "Warning -- direkte[" << (col ? col->fullname() : "?.?")
 	<< "]::append the combined index has more 2^32 rows (too many rows)";
     if (ibis::gVerbose > 10) {
 	ibis::util::logger lg;
