@@ -1,3 +1,6 @@
+2014-02-12 John Wu <John dot Wu at ACM dot org>
+	* src/index.cpp, src/idirekte.cpp: check for col being nil
+
 2014-02-10 John Wu <John dot Wu at ACM dot org>
 	* src/selectClause.cpp:397 change <= to <, the equal sign allows
 	a selection expression without an aggregator to be declared as
